--- a/MENU.HTML
+++ b/MENU.HTML
@@ -81,8 +81,8 @@ font-family: "Bookman Old Style";
 
 
 <div class="gallery">
- 	 <a target="_blank" href="M1.png"> 
- 	   <img src="M1.png" alt="POSTRES" width="600" height="400">
+ 	 <a target="_blank" href="postre.png"> 
+ 	   <img src="postre.png" alt="POSTRES" width="600" height="400">
  	 </a>
   		<div class="desc">Frappucino Chocolate</div>
 </div>
