--- a/MENU.HTML
+++ b/MENU.HTML
@@ -152,7 +152,7 @@ font-family: "Bookman Old Style";
 
 <div class="gallery">
  	 <a target="_blank" href="P1.png"> 
- 	   <img src="P1.PNG" alt="POSTRES" width="600" height="400">
+ 	   <img src="P1.png" alt="POSTRES" width="600" height="400">
  	 </a>
   		<div class="desc">Crocante de manzana vegetal Relleno de manzana con hojuelas de avena S/ 15.00</div>
 </div>
